--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,10 @@
 {
-  "manifest_version": 2,
-
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
-  "version": "1.0",
-  //override tab chrome.
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+  "name":"Tutor Mom",
+  "description":"This demonstrates time out",
+  "version":"1",
+  "manifest_version":2,
+  "background":{
+      "scripts":["background.js"]
   },
-  "background": {
-    // "page": "background.html",
-    "scripts": ["background.js"],
-    "persistent": true
-  },
-  //"background"
-  "permissions": [
-    "background",
-    "activeTab",
-    "https://ajax.googleapis.com/",
-    "tabs",
-    "<all_urls>",
-    "webRequest"
-  ]
+  "permissions": ["tabs"]
 }
