initialize branch geoff

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name":"Tutor Mom",
-  "description":"This demonstrates time out",
+  "description":"No math no Facebook",
   "version":"1",
   "manifest_version":2,
   "background":{
