--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "version":"1",
   "manifest_version":2,
   "background":{
-      "scripts":["background.js"]
-      //"page": "background.html"
+      "scripts":["background.js"],
+      "persistent": true
   },
   "permissions": ["tabs"]
 }
