--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,9 @@
       "scripts":["background.js"],
       "persistent": true
   },
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  },
   "permissions": ["tabs"]
 }
