--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": ["tabs"]
+  "permissions": ["tabs", "storage"]
 }
