pull geoff, pull!

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name":"Tutor Mom",
-  "description":"No math no Facebook",
+  "name":"Tutor Hawk",
+  "description":"No math, no Facebook",
   "version":"1",
   "manifest_version":2,
   "background":{
